[package]
name = "ritsu"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "tokio-ritsu" ]

[features]

[dependencies]
libc = "0.2"
futures-task = "0.3"
futures-util = "0.3"
pin-project-lite = "*"
bitflags = "1"
bytes = "0.5"
slab = "*"
socket2 = "*"
static_assertions = "1"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.3.1", features = [ "unstable" ] }

[dev-dependencies]
anyhow = "*"
