[package]
name = "ritsu"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
license = "MIT"
description = "An experimental asynchronous runtime based on `io-uring`."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
libc = "0.2"
pin-project-lite = "0.1"
bitflags = "1"
bytes = "1"
futures-task = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.5.0-alpha.4", features = [ "unstable" ] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = [ "rt" ] }
