[package]
name = "fsreader"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ritsu = { path = ".." }
argh = "0.1"
anyhow = "1"
bytes = "1"
libc = "0.2"
tokio = { version = "1", features = [ "rt", "sync" ] }
rayon = "1"
rand = "0.8"
rand_chacha = "0.3"
data-encoding = "2"
