[package]
name = "ritsu-hyper"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ritsu = { path = "..", version = "0.1", features = [ "io" ] }
futures-util = "0.3"
hyper = "*"
