[package]
name = "tokio-ritsu"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "../../fork/tokio/tokio", features = [ "sync" ] }
ritsu = { path = ".." }

[dev-dependencies]
tokio = { path = "../../fork/tokio/tokio", features = [ "full" ] }
lazy_static = "*"
bytes = "0.5"
anyhow = "*"
