[package]
name = "tokio-ritsu"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = [ "sync", "rt-core" ] }
ritsu = { path = ".." }
pin-project-lite = "*"

[dev-dependencies]
tokio = { version = "0.2", features = [ "full" ] }
lazy_static = "*"
bytes = "0.5"
anyhow = "*"
